<resources>
    <string name="app_name">Nutri App</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="foods_menu">Foods</string>
    <string name="chat_menu">Chat</string>
    <string name="ok">OK</string>

    <!--
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7601241876768519/8197658385</string>
    -->
    <string name="banner_ad_unit_id">ca-app-pub-7601241876768519/8197658385</string>
</resources>
