<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.google.firebase.codelab.friendlychat.MainActivity">

    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fresh_config_menu"
        android:title="@string/fresh_config"
        app:showAsAction="never"/>
    <item
        android:id="@+id/invite_menu"
        android:title="@string/invite_menu_label"/>
    <item
        android:id="@+id/crash_menu"
        android:title="@string/cause_crash"/>
    <item
        android:id="@+id/test"
        android:title="@string/foods_menu"/>
    <item
        android:id="@+id/display_personal_data_menu"
        android:title="Personal Data"/>


</menu>
