<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.google.firebase.codelab.friendlychat.Diary">

    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/chat_menu"
        android:title="@string/chat_menu"/>
    <item
        android:id="@+id/display_personal_data_menu"
        android:title="Personal Data"/>
    <item
        android:id="@+id/food_menu"
        android:title="@string/foods_menu"/>
    <item
        android:id="@+id/another_menu"
        android:title="Another Date"/>
    <item
        android:id="@+id/delete_menu"
        android:title="Delete Entry"/>


</menu>
